--- a/style.scss
+++ b/style.scss
@@ -164,6 +164,7 @@ header {
             display: flex;
 
             .btn-sec {
+
                 padding: 12px 30px;
                 border: solid 2px #fff;
                 border-radius: 10px;
@@ -171,14 +172,11 @@ header {
                 display: flex;
                 align-items: center;
                 margin-top: 50px;
-
-                a {
-                    color: #FFF;
-                    font-size: 16px;
-                    text-align: center;
-                    font-family: Open Sans;
-                    font-weight: 600;
-                }
+                color: #FFF;
+                font-size: 16px;
+                text-align: center;
+                font-family: Open Sans;
+                font-weight: 600;
             }
 
             .btn-tel {
@@ -830,8 +828,9 @@ section {
                 font-weight: 700;
                 letter-spacing: -0.96px;
             }
-            p{
-                margin-top: 20px;   
+
+            p {
+                margin-top: 20px;
             }
         }
 
@@ -851,87 +850,106 @@ section {
     }
 }
 
-.slider {
+.klient-section {
     width: 100%;
-    height: 600px;
-    display: flex;
 
-    .carusel {
-        width: 80%;
-        height: 100%;
+    .klient {
         margin: auto;
-        display: flex;
-        flex-direction: column;
 
-        .text-slider {
-            font-size: 30px;
-            font-weight: 600;
+        .top {
+            padding: 0 10%;
+
+            h1 {
+                color: var(--base-black, #140A32);
+                font-size: 32px;
+                font-weight: 700;
+                letter-spacing: -0.96px;
+            }
         }
 
-        .carusel-in {
-            width: 100%;
-            height: 100%;
+        .bottom {
             display: flex;
 
-            .arrow {
-                width: 60px;
-                height: 60px;
-
-                margin-top: 17%;
-                cursor: pointer;
-            }
-
-            .left-arrow {
-                background-image: url(img/chap.png);
-                background-repeat: no-repeat;
-                background-position: center;
-                background-size: contain;
-            }
-
-            .right-arrow {
-                background-image: url(img/ong.png);
-                background-repeat: no-repeat;
-                background-position: center;
-                background-size: contain;
-            }
-
-            .slide {
-                width: 90%;
-                height: 80%;
-
-                margin: auto;
+            .left,
+            .right {
+                width: 10%;
                 display: flex;
+                flex-direction: column;
+                justify-content: center;
                 align-items: center;
-                overflow-x: hidden;
 
-                .slide-in {
+                button {
+                    width: 24px;
+                    height: 24px;
+                    outline: none;
+                    border: none;
+                    border-radius: 50%;
+                    background: var(--gray-background, rgba(47, 43, 67, 0.04));
+                    cursor: pointer;
+                }
+            }
+
+            .center {
+                width: 80%;
+                display: flex;
+                justify-content: space-between;
+
+                .cards {
+                    width: 367px;
+                    padding: 30px;
+                    border-radius: 20px;
+                    border: 1px solid var(--gray-borders, rgba(47, 43, 67, 0.15));
                     display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
 
-                    .slide-all {
-                        width: 400px;
+                    .card-top {
+                        display: flex;
 
-                        height: 95%;
-                        border-radius: 15px;
-                        transition: 0.5s;
-                        margin-right: 50px;
+                        .card-right {
+                            margin-left: 15px;
 
-                        .slide-head {
-                            display: flex;
-                            align-items: center;
-                            margin: 30px 60px;
+                            p {
+                                color: var(--base-black, #140A32);
+                                font-size: 18px;
+                                font-weight: 600;
+                            }
+
+                            span {
+                                color: var(--gray-medium, rgba(47, 43, 67, 0.50));
+                                font-size: 16px;
+                                font-weight: 400;
+                            }
+                        }
+                    }
+
+                    .card-center {
+                        flex: 1;
+                        padding-top: 24px;
+
+                        p {
+                            color: var(--base-black, #140A32);
+                            font-weight: 400;
+                            line-height: 140%;
+                        }
+                    }
+
+                    .card-bottom {
+                        padding-top: 24px;
+
+                        h5 {
+                            color: var(--gray-medium, rgba(47, 43, 67, 0.50));
+                            font-size: 14px;
+                            font-weight: 400;
+                            margin-top: auto;
                         }
 
-                        .slide-text {
-                            width: 70%;
-                            margin: auto;
-                        }
-
-                        .slide-bottom {
-                            width: 70%;
-                            margin: auto;
-                            color: #016f52;
-                            margin-top: 60px;
-                            font-size: 18px;
+                        p {
+                            margin-top: 12px;
+                            color: var(--green, #33836E);
+                            font-weight: 600;
+                            line-height: 150%;
+                            /* 24px */
                         }
                     }
                 }
@@ -939,24 +957,6 @@ section {
         }
     }
 }
-
-
-
-
-
-
-.slide1 {
-    margin-left: 1.3%;
-}
-
-// -15.5%
-
-// -32.3%
-
-
-
-
-
 
 li .head-a {
     text-decoration: none;
