--- a/style.scss
+++ b/style.scss
@@ -603,6 +603,7 @@ section {
                 input {
                     display: flex;
                     width: 249px;
+                    position: relative;
                     padding: 7px 16px 8px 16px;
                     flex-direction: column;
                     justify-content: center;
@@ -611,6 +612,31 @@ section {
                     border-radius: 10px;
                     outline: none;
                     border: none;
+                }
+
+                #input {
+
+                    &::-webkit-outer-spin-button,
+                    &::-webkit-inner-spin-button {
+                        -webkit-appearance: none;
+                        margin: 0;
+                    }
+                }
+
+                label {
+                    position: absolute;
+                    margin-top: 17px;
+                    margin-left: 15px;
+                    color: grey;
+                    transition: all 0.3s ease;
+                    pointer-events: none;
+                }
+
+                input:focus~.label,
+                input:valid~.label {
+                    margin-top: 0px;
+                    font-size: 15px;
+                    color: #acacac;
                 }
 
                 a {
@@ -756,6 +782,15 @@ section {
                 margin-top: 22px;
             }
 
+            #input {
+
+                &::-webkit-outer-spin-button,
+                &::-webkit-inner-spin-button {
+                    -webkit-appearance: none;
+                    margin: 0;
+                }
+            }
+
             label {
                 position: absolute;
                 top: 20px;
@@ -861,12 +896,11 @@ section {
 
             h1 {
                 color: var(--base-black, #140A32);
-                font-size: 32px;
                 font-weight: 700;
                 letter-spacing: -0.96px;
             }
         }
-        
+
         .bottom {
             overflow: hidden;
             display: flex;
@@ -896,31 +930,33 @@ section {
                 gap: 30px;
                 transition: 0.5s !important;
                 overflow: auto;
-                &::-webkit-scrollbar{
+
+                &::-webkit-scrollbar {
                     display: none;
                 }
+
                 .cards {
                     min-width: 367px;
-                    width: fit-content; 
+                    width: fit-content;
                     padding: 30px;
                     border-radius: 20px;
                     border: 1px solid var(--gray-borders, rgba(47, 43, 67, 0.15));
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
-                    
+
                     .card-top {
                         display: flex;
-            
+
                         .card-right {
                             margin-left: 15px;
-            
+
                             p {
                                 color: var(--base-black, #140A32);
                                 font-size: 18px;
                                 font-weight: 600;
                             }
-            
+
                             span {
                                 color: var(--gray-medium, rgba(47, 43, 67, 0.50));
                                 font-size: 16px;
@@ -928,28 +964,28 @@ section {
                             }
                         }
                     }
-            
+
                     .card-center {
                         flex: 1;
                         padding-top: 24px;
-            
+
                         p {
                             color: var(--base-black, #140A32);
                             font-weight: 400;
                             line-height: 140%;
                         }
                     }
-            
+
                     .card-bottom {
                         padding-top: 24px;
-            
+
                         h5 {
                             color: var(--gray-medium, rgba(47, 43, 67, 0.50));
                             font-size: 14px;
                             font-weight: 400;
                             margin-top: auto;
                         }
-            
+
                         p {
                             margin-top: 12px;
                             color: var(--green, #33836E);
@@ -959,7 +995,258 @@ section {
                     }
                 }
             }
-            
+        }
+    }
+}
+
+.yurist-portal {
+    width: 80%;
+    margin: auto;
+    margin-top: 80px;
+
+    .top {
+        h1 {
+            color: var(--base-black, #140A32);
+            font-weight: 700;
+            letter-spacing: -0.96px;
+        }
+    }
+
+    .bottom {
+        margin-top: 30px;
+        display: flex;
+        justify-content: space-between;
+
+        .bottom-left {
+            width: 39%;
+
+            .yurist-cards {
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+
+                .yurist-card {
+                    cursor: pointer;
+                    border-radius: 20px;
+                    border: 1px solid var(--gray-borders, rgba(47, 43, 67, 0.15));
+                    display: flex;
+                    padding: 20px;
+                    transition: .5s;
+
+                    &:hover {
+                        transform: scale(1.02);
+                        box-shadow: 0px 0px 10px #00000031;
+                    }
+
+                    .left {
+                        display: flex;
+                        justify-content: center;
+
+                        img {
+                            width: 70px;
+                            height: 70px;
+                        }
+                    }
+
+                    .right {
+                        padding-left: 20px;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 5px;
+
+                        .yurist-name {
+                            color: var(--base-black, #140A32);
+                            font-size: 18px;
+                            font-weight: 600;
+                        }
+
+                        .addres {
+                            color: var(--base-black, #140A32);
+                            font-size: 16px;
+                            font-weight: 400;
+                        }
+
+                        span {
+                            color: var(--gray-medium, rgba(47, 43, 67, 0.50));
+                            font-size: 16px;
+                            font-weight: 400;
+                        }
+                    }
+                }
+
+                a {
+                    border-radius: 10px;
+                    background: #E0ECE9;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 16px 36px 18px 36px;
+                    color: var(--green, #33836E);
+                    font-weight: 600;
+                }
+            }
+        }
+
+        .bottom-right {
+            width: 59%;
+
+            .container {
+                padding: 40px;
+                border-radius: 20px;
+                background: var(--green, #33836E);
+
+                .con-top {
+                    display: flex;
+                    justify-content: space-between;
+
+                    h1 {
+                        color: var(--base-white, #FFF);
+                        font-weight: 700;
+                        letter-spacing: -0.96px;
+                    }
+
+                    .online {
+                        display: flex;
+                        padding: 5px 16px 6px 16px;
+                        justify-content: center;
+                        align-items: center;
+                        gap: 10px;
+                        border-radius: 10px;
+                        background: var(--base-white, #FFF);
+                    }
+                }
+
+                .con-bottom {
+                    p {
+                        color: var(--base-white, #FFF);
+                        font-size: 18px;
+                        font-weight: 400;
+                        margin-top: 10px;
+                    }
+
+                    form {
+                        margin-top: 30px;
+
+                        textarea {
+                            width: 100%;
+                            height: 213px;
+                            border-radius: 10px;
+                            resize: none;
+                            outline: none;
+                            border:  none;
+                            padding: 12px 16px 8px 16px;
+                        }
+
+                        .flex-form {
+                            margin-top: 20px;
+                            display: flex;
+                            justify-content: space-between;
+
+                            .input-container {
+                                position: relative;
+                                width: 230px;
+                                height: 60px;
+                                border-radius: 10px;
+                                background-color: #fff;
+
+                                input {
+                                    font-size: 20px;
+                                    width: 100%;
+                                    border: none;
+                                    background-color: transparent;
+                                    outline: none;
+                                    padding-left: 15px;
+                                    margin-top: 22px;
+                                }
+
+                                #input {
+
+                                    &::-webkit-outer-spin-button,
+                                    &::-webkit-inner-spin-button {
+                                        -webkit-appearance: none;
+                                        margin: 0;
+                                    }
+                                }
+
+                                label {
+                                    position: absolute;
+                                    top: 20px;
+                                    left: 15px;
+                                    color: grey;
+                                    transition: all 0.3s ease;
+                                    pointer-events: none;
+                                }
+
+                                input:focus~.label,
+                                input:valid~.label {
+                                    top: 3px;
+                                    font-size: 15px;
+                                    color: #acacac;
+                                }
+                            }
+
+                            input[type='submit'] {
+                                padding: 16px 24px 18px 24px;
+                                gap: 10px;
+                                border-radius: 10px;
+                                background: var(--base-black, #140A32);
+                                color: var(--base-white, #FFF);
+                                font-weight: 600;
+                                cursor: pointer;
+                                outline: none;
+                                border: none;
+                            }
+                        }
+                    }
+
+                    p {
+                        &:nth-child(3) {
+                            color: rgba(255, 255, 255, 0.50);
+                            font-size: 12px;
+                            font-weight: 600;
+                        }
+                    }
+
+                    .footer {
+                        display: flex;
+                        margin-top: 30px;
+
+                        p {
+                            margin-right: 42px;
+                            color: var(--base-white, #FFF);
+                            font-size: 20px;
+                            font-weight: 700;
+                            letter-spacing: -0.6px;
+
+                            &:first-child,
+                            &:last-child {
+                                &::after {
+                                    color: var(--base-white, #FFF);
+                                    font-family: Open Sans;
+                                    font-size: 16px;
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    line-height: normal;
+                                    display: block;
+                                    margin-top: 10px;
+                                }
+                            }
+
+                            &:first-child {
+                                &::after {
+                                    content: 'сейчас онлайн';
+                                }
+                            }
+
+                            &:last-child {
+                                &::after{
+                                    content: 'средняя скорость ответа';
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
