--- a/style.css
+++ b/style.css
@@ -1035,6 +1035,38 @@ section .seo .bottom {
   content: "средняя скорость ответа";
 }
 
+footer {
+  width: 80%;
+  margin: auto;
+  margin-top: 80px;
+}
+footer .top h1 {
+  color: var(--base-black, #140A32);
+  font-weight: 700;
+  letter-spacing: -0.96px;
+}
+footer .bottom {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  padding-top: 40px;
+  gap: 40px 0;
+}
+footer .bottom div {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+footer .bottom div h2 {
+  color: var(--base-black, #140A32);
+  font-weight: 700;
+}
+footer .bottom div a {
+  color: var(--base-black, #140A32);
+  font-weight: 400;
+}
+
 li .head-a {
   text-decoration: none;
   color: #acacac;
