--- a/style.scss
+++ b/style.scss
@@ -1133,7 +1133,7 @@ section {
                             border-radius: 10px;
                             resize: none;
                             outline: none;
-                            border:  none;
+                            border: none;
                             padding: 12px 16px 8px 16px;
                         }
 
@@ -1239,13 +1239,52 @@ section {
                             }
 
                             &:last-child {
-                                &::after{
+                                &::after {
                                     content: 'средняя скорость ответа';
                                 }
                             }
                         }
                     }
                 }
+            }
+        }
+    }
+}
+
+footer {
+    width: 80%;
+    margin: auto;
+    margin-top: 80px;
+
+    .top {
+        h1 {
+            color: var(--base-black, #140A32);
+            font-weight: 700;
+            letter-spacing: -0.96px;
+        }
+    }
+
+    .bottom {
+        display: flex;
+        justify-content:flex-start ;
+        flex-wrap: wrap;
+        padding-top: 40px;
+        gap: 40px 0;
+
+        div {
+            width: 25%;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+
+            h2 {
+                color: var(--base-black, #140A32);
+                font-weight: 700;
+            }
+
+            a {
+                color: var(--base-black, #140A32);
+                font-weight: 400;
             }
         }
     }
