--- a/style.scss
+++ b/style.scss
@@ -102,6 +102,12 @@ header {
                     gap: 10px;
                     border-radius: 10px;
                     border: 1px solid rgba(47, 43, 67, 0.15);
+                    transition: 0.5s;
+
+                    &:hover {
+                        transform: scale(1.02);
+                        box-shadow: 0px 0px 10px #00000031;
+                    }
                 }
             }
 
@@ -552,7 +558,7 @@ section {
         }
 
         .right {
-            background-image: url(./img/workers.png);
+            background-image: url(../img/workers.png);
             background-repeat: no-repeat;
         }
     }
@@ -744,7 +750,7 @@ section {
     color: white;
     margin-bottom: 50px;
     background-color: #e5e5e5;
-    background-image: url(./img/iphone.png);
+    background-image: url(../img/iphone.png);
     background-repeat: no-repeat;
     background-position: right;
     padding: 30px;
@@ -1266,7 +1272,7 @@ footer {
 
     .bottom {
         display: flex;
-        justify-content:flex-start ;
+        justify-content: flex-start;
         flex-wrap: wrap;
         padding-top: 40px;
         gap: 40px 0;
@@ -1285,6 +1291,66 @@ footer {
             a {
                 color: var(--base-black, #140A32);
                 font-weight: 400;
+            }
+        }
+    }
+}
+
+.zayavka {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 100;
+    backdrop-filter: blur(15px);
+    width: 100%;
+    height: 100vh;
+
+    .container {
+        width: 896px;
+        padding: 20px;
+        border-radius: 20px;
+        background: var(--base-white, #FFF);
+        box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.10);
+
+        .top {
+            img {
+                float: right;
+                cursor: pointer;
+            }
+        }
+
+        .bottom {
+            margin-top: 50px;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+
+            h1 {
+                color: var(--base-black, #140A32);
+                font-weight: 700;
+                letter-spacing: -0.96px;
+                margin-top: 30px;
+            }
+
+            p {
+                color: var(--base-black, #140A32);
+                font-weight: 400;
+                line-height: 160%;
+                margin-top: 10px;
+            }
+
+            button {
+                padding: 16px 36px 18px 36px;
+                border-radius: 10px;
+                outline: none;
+                border: none;
+                background: var(--green, #33836E);
+                color: var(--base-white, #FFF);
+                font-weight: 600;
+                margin-top: 30px;
+                cursor: pointer;
             }
         }
     }
