--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ header nav .nav-bottom .right button {
   display: flex;
 }
 .header .left .btn-2 .btn-sec {
+  cursor: pointer;
   padding: 12px 30px;
   border: solid 2px #fff;
   border-radius: 10px;
@@ -155,6 +156,12 @@ header nav .nav-bottom .right button {
   text-align: center;
   font-family: Open Sans;
   font-weight: 600;
+  transition: 0.5s;
+}
+.header .left .btn-2 .btn-sec:hover {
+  border: #33836E solid;
+  background-color: transparent;
+  color: #33836E;
 }
 .header .left .btn-2 .btn-tel {
   margin-top: 50px;
@@ -239,6 +246,9 @@ section .top p {
   font-weight: 400;
   line-height: 160%;
   margin-top: 15px;
+}
+section .top .txt {
+  cursor: pointer;
 }
 section .bottom {
   width: 100%;
@@ -533,8 +543,11 @@ section .bottom .card:hover img {
   font-size: 15px;
   color: #acacac;
 }
-.choose .bottom .right .input-container a {
+.choose .bottom .right .input-container input[type=button] {
+  width: auto;
   display: flex;
+  cursor: pointer;
+  outline: none;
   padding: 16px 36px 18px 36px;
   justify-content: center;
   align-items: center;
@@ -544,6 +557,7 @@ section .bottom .card:hover img {
   color: var(--base-white, #FFF);
   text-align: center;
   font-weight: 600;
+  background-color: transparent;
 }
 .choose .bottom .right .text {
   color: rgba(255, 255, 255, 0.5);
@@ -671,9 +685,11 @@ section .bottom .card:hover img {
   font-size: 15px;
   color: #acacac;
 }
-.ask .right a {
+.ask .right button {
   text-decoration: none;
   display: inline-block;
+  outline: none;
+  background-color: transparent;
   width: 230px;
   height: 60px;
   display: flex;
@@ -687,7 +703,7 @@ section .bottom .card:hover img {
   background-color: #33836E;
   transition: 0.5s;
 }
-.ask .right a:hover {
+.ask .right button:hover {
   border: #33836E solid;
   background-color: transparent;
   color: #33836E;
@@ -996,7 +1012,7 @@ section .seo .bottom {
   font-size: 15px;
   color: #acacac;
 }
-.yurist-portal .bottom .bottom-right .container .con-bottom form .flex-form input[type=submit] {
+.yurist-portal .bottom .bottom-right .container .con-bottom form .flex-form input[type=button] {
   padding: 16px 24px 18px 24px;
   gap: 10px;
   border-radius: 10px;
@@ -1125,6 +1141,123 @@ footer .bottom div a {
   cursor: pointer;
 }
 
+.konsultatsiya {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 100;
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+  width: 100%;
+  height: 100vh;
+}
+.konsultatsiya .container {
+  overflow: hidden;
+  display: flex;
+  height: 400px;
+  width: 896px;
+  border-radius: 20px;
+  background: var(--base-white, #FFF);
+  box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.1);
+}
+.konsultatsiya .container .left {
+  width: 30%;
+  height: 100%;
+  position: relative;
+  background-image: url(./img/Ellipse\ 14.png);
+  background-repeat: no-repeat;
+}
+.konsultatsiya .container .left img {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: auto;
+}
+.konsultatsiya .container .right {
+  width: 70%;
+  padding: 30px;
+}
+.konsultatsiya .container .right .top img {
+  float: right;
+  cursor: pointer;
+}
+.konsultatsiya .container .right h1 {
+  margin-top: 30px;
+  color: var(--base-black, #140A32);
+  font-weight: 700;
+  letter-spacing: -0.96px;
+  margin-top: 30px;
+}
+.konsultatsiya .container .right .yurists {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+.konsultatsiya .container .right .yurists p {
+  margin-left: 20px;
+  color: var(--base-black, #140A32);
+  font-weight: 400;
+}
+.konsultatsiya .container .right form .flex-form {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.konsultatsiya .container .right form .flex-form .input-container {
+  position: relative;
+  width: 200px;
+  height: 60px;
+  border-radius: 10px;
+  border: 1px solid var(--gray-borders, rgba(47, 43, 67, 0.15));
+  background: var(--base-white, #FFF);
+}
+.konsultatsiya .container .right form .flex-form .input-container input {
+  font-size: 20px;
+  width: 100%;
+  border: none;
+  background-color: transparent;
+  outline: none;
+  padding-left: 15px;
+  margin-top: 22px;
+}
+.konsultatsiya .container .right form .flex-form .input-container #input::-webkit-outer-spin-button, .konsultatsiya .container .right form .flex-form .input-container #input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.konsultatsiya .container .right form .flex-form .input-container label {
+  position: absolute;
+  top: 17px;
+  left: 15px;
+  color: grey;
+  transition: all 0.3s ease;
+  pointer-events: none;
+}
+.konsultatsiya .container .right form .flex-form .input-container input:focus ~ .label,
+.konsultatsiya .container .right form .flex-form .input-container input:valid ~ .label {
+  top: 3px;
+  font-size: 15px;
+  color: #acacac;
+}
+.konsultatsiya .container .right form .flex-form input[type=button] {
+  padding: 16px 24px 18px 24px;
+  gap: 10px;
+  border-radius: 10px;
+  background: var(--base-black, #140A32);
+  color: var(--base-white, #FFF);
+  font-weight: 600;
+  cursor: pointer;
+  outline: none;
+  border: none;
+}
+.konsultatsiya .container .right p:nth-child(5) {
+  color: var(--gray-low, rgba(47, 43, 67, 0.4));
+  font-size: 12px;
+  font-weight: 600;
+  margin-top: 20px;
+}
+
 li .head-a {
   text-decoration: none;
   color: #acacac;
@@ -1154,4 +1287,44 @@ li .head-a:hover {
 
 .head-a:hover::before {
   width: 80%;
+}
+
+.warning {
+  width: 400px;
+  border-radius: 20px;
+  padding: 20px;
+  position: fixed;
+  display: none;
+  align-items: center;
+  border: 1px solid rgb(160, 160, 160);
+  background-color: #fff;
+  gap: 20px;
+  z-index: 1000;
+  top: 20px;
+  right: 30px;
+}
+.warning img {
+  width: 50px;
+  height: 50px;
+}
+.warning h1 {
+  font-size: 1.5rem;
+}
+
+.warning_anim {
+  animation: error-animation 4s 1;
+}
+@keyframes error-animation {
+  0% {
+    right: -100%;
+  }
+  10% {
+    right: 30px;
+  }
+  90% {
+    right: 30px;
+  }
+  100% {
+    right: -100%;
+  }
 }/*# sourceMappingURL=style.css.map */
