--- a/style.scss
+++ b/style.scss
@@ -43,7 +43,6 @@ header {
                     background: #e5e5e5;
                     outline: none;
                     border: none;
-                    padding-right: 45px;
                 }
 
                 img {
@@ -133,6 +132,13 @@ header {
     }
 }
 
+.url {
+    color: #acacac;
+    font-weight: 400;
+    width: 80%;
+    margin: auto;
+    margin-top: 40px;
+}
 .header {
     width: 80%;
     margin: auto;
@@ -141,12 +147,6 @@ header {
     .left {
         width: 60%;
         margin: auto;
-
-        .url {
-            color: #acacac;
-            margin-top: 40px;
-            font-weight: 400;
-        }
 
         .title {
             color: #140A32;
@@ -220,7 +220,6 @@ header {
         .effect {
             display: flex;
             margin-top: 40px;
-
             .one {
                 display: flex;
                 align-items: center;
@@ -267,88 +266,88 @@ section {
 
     .freeConsultation {
         width: 100%;
-    }
-
-    .top {
-        margin-top: 80px;
-        gap: 15px;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-
-        h2 {
-            color: #140A32;
-            font-size: 32px;
-            font-weight: 700;
-            letter-spacing: -0.96px;
-        }
-
-        p {
-            color: #140A32;
-            font-weight: 400;
-            line-height: 160%;
-            margin-top: 15px;
-        }
-
-        .txt {
-            cursor: pointer;
-        }
-    }
-
-    .bottom {
-        width: 100%;
-        display: flex;
-        margin-top: 30px;
-        justify-content: space-between;
-
-        .card {
-            width: 280px;
-            height: 200px;
+        .top {
+            margin-top: 80px;
+            gap: 15px;
+            width: 100%;
             display: flex;
-            font-size: 16px;
-            font-weight: 400;
-            padding: 0 0 0 20px;
-            border-radius: 10pt;
             flex-direction: column;
-            justify-content: space-evenly;
-            border: 2px solid #00000031;
-            transition: background 0.5s;
-            transition: 0.5s;
-
+    
+            h2 {
+                color: #140A32;
+                font-size: 32px;
+                font-weight: 700;
+                letter-spacing: -0.96px;
+            }
+    
             p {
                 color: #140A32;
                 font-weight: 400;
+                line-height: 160%;
+                margin-top: 15px;
             }
-
-            .phonenumber {
-                color: #140A32;
-                font-size: 20px;
-                font-weight: 700;
-            }
-
+    
             .txt {
-                color: #33836E;
-                font-weight: 600;
-            }
-
-            &:hover {
-                color: #fff;
                 cursor: pointer;
-                background: #33836E;
-                transform: scale(1.05);
             }
-
-            &:hover {
-                .txt {
-                    color: #fff;
+        }
+    
+        .bottom {
+            width: 100%;
+            display: flex;
+            margin-top: 30px;
+            justify-content: space-between;
+    
+            .card {
+                width: 280px;
+                height: 200px;
+                display: flex;
+                font-size: 16px;
+                font-weight: 400;
+                padding: 0 0 0 20px;
+                border-radius: 10pt;
+                flex-direction: column;
+                justify-content: space-evenly;
+                border: 2px solid #00000031;
+                transition: background 0.5s;
+                transition: 0.5s;
+    
+                p {
+                    color: #140A32;
+                    font-weight: 400;
                 }
-
-                img {
-                    filter: brightness(2);
+    
+                .phonenumber {
+                    color: #140A32;
+                    font-size: 20px;
+                    font-weight: 700;
+                }
+    
+                .txt {
+                    color: #33836E;
+                    font-weight: 600;
+                }
+    
+                &:hover {
+                    color: #fff;
+                    cursor: pointer;
+                    background: #33836E;
+                    transform: scale(1.05);
+                }
+    
+                &:hover {
+                    .txt {
+                        color: #fff;
+                    }
+    
+                    img {
+                        filter: brightness(2);
+                    }
                 }
             }
         }
     }
+
 }
 
 // Contact styling 1280
@@ -356,7 +355,6 @@ section {
     margin-top: 80px !important;
     width: 80%;
     margin: auto;
-    height: 200px;
     border-radius: 20px;
     background-color: #33836E;
     display: flex;
@@ -749,7 +747,7 @@ section {
 .ask {
     width: 80%;
     margin: auto;
-    height: 200px;
+    // height: 200px;
     border-radius: 20px;
     display: flex;
     justify-content: space-between;
@@ -827,9 +825,6 @@ section {
             background-color: transparent;
             width: 230px;
             height: 60px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             border-radius: 10px;
             font-size: 18px;
             color: white;
@@ -850,51 +845,6 @@ section {
             color: #858585;
             font-size: 13px;
             transform: translateY(-45px);
-        }
-    }
-}
-
-section {
-    width: 80%;
-    margin: 0 auto;
-
-    .seo {
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-
-        .top {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-            height: 200px;
-            overflow: hidden;
-            transition: 0.5s;
-
-            h2 {
-                color: var(--base-black, #140A32);
-                font-size: 32px;
-                font-weight: 700;
-                letter-spacing: -0.96px;
-            }
-
-            p {
-                margin-top: 20px;
-            }
-        }
-
-        .bottom {
-            width: 100%;
-            height: 56px;
-            display: flex;
-            color: #33836E;
-            font-weight: 600;
-            align-items: center;
-            border-radius: 10px;
-            background: #E0ECE9;
-            justify-content: center;
-            user-select: none;
-            cursor: pointer;
         }
     }
 }
