--- a/responsive/style.scss
+++ b/responsive/style.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 376px) {
+@media screen and (max-width: 426px) {
     header{
         padding-top: 20px;
         nav{
@@ -172,7 +172,7 @@
         display: none;
     }
     
-    .klient-section{
-        .
-    }
+    // .klient-section{
+    //     .
+    // }
 }
